# MagicSquare_02

./: .gitignore  README.md  pyproject.toml
Prompt/: 01_Magic_Square_Problem_Definition_Report_prompt.md  02_Magic_Square_Dual_Track_TDD_Clean_Architecture_Report_prompt.md  03_Magic_Square_CursorRules_Report_prompt.md  04_Magic_Square_User_Journey_Traceability_Report_prompt.md  05_Magic_Square_PRD_Report_prompt.md  06_Magic_Square_Layered_Design_TDD_Contracts_Report_prompt.md  07_Magic_Square_README_Repository_Guide_Report_prompt.md  08_Magic_Square_Git_Branch_PR_Workflow_Report_prompt.md  09_Magic_Square_Dual_Track_RED_Test_Design_Report_prompt.md  10_Magic_Square_Local_Execution_and_GUI_Report_prompt.md  10_Magic_Square_RED_Test_Skeleton_Dev_Environment_Report_prompt.md  11_Magic_Square_Refactoring_Analysis_and_Plan_Report_prompt.md  12_MagicSquare_KPT_and_SMART_Final.md
Report/: 01_Magic_Square_Problem_Definition_Report.md  02_Magic_Square_Dual_Track_TDD_Clean_Architecture_Report.md  03_Magic_Square_CursorRules_Report.md  04_Magic_Square_User_Journey_Traceability_Report.md  05_Magic_Square_PRD_Report.md  06_Magic_Square_Layered_Design_TDD_Contracts_Report.md  07_Magic_Square_README_Repository_Guide_Report.md  08_Magic_Square_Git_Branch_PR_Workflow_Report.md  09_Magic_Square_Dual_Track_RED_Test_Design_Report.md  10_Magic_Square_Local_Execution_and_GUI_Report.md  10_Magic_Square_RED_Test_Skeleton_Dev_Environment_Report.md  11_Magic_Square_Refactoring_Analysis_and_Plan_Report.md  12_MagicSquare_KPT_and_SMART_Final_Report.md  A조_KPT_정리문서.md
tests/: conftest.py
(+30 files in other folders)
